WhereAndWhen Stuck Problem Fixed2

--- a/Css/style.css
+++ b/Css/style.css
@@ -19,6 +19,10 @@ body {
   
 }
 
+#Home
+{
+  transition: all .6s ease-in-out;
+}
 
 
 #backtotop{
